--- a/app/src/main/res/layout/empty_layout.xml
+++ b/app/src/main/res/layout/empty_layout.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/emptyList"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_default_16dp"
+    android:visibility="gone"
+    tools:showIn="@layout/quote_recycler"
+    tools:visibility="visible">
 
-
-    <LinearLayout
-        android:id="@+id/emptyList"
-        android:layout_width="match_parent"
-        android:padding="@dimen/padding_default_16dp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible"
-        tools:showIn="@layout/quote_recycler">
-
-        <TextView
-            android:text="Desculpe não encontrei nada, mas o passarinho é fofo né?"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="?android:textColorPrimary" />
-    </LinearLayout>
-</layout>
+        android:text="Desculpe não encontrei nada, mas o passarinho é fofo né?"
+        android:textAlignment="center"
+        android:textColor="?android:textColorPrimary" />
+</LinearLayout>
