--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,183 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?android:colorBackground">
 
-
-    <ScrollView
-        android:background="?android:colorBackground"
+    <LinearLayout
+        android:id="@+id/settingsContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        tools:context=".view.fragments.SettingsFragment">
 
-        <LinearLayout
-            android:id="@+id/settingsContainer"
+        <RelativeLayout
+            android:id="@+id/profileTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            tools:context=".view.fragments.SettingsFragment">
+            android:background="?attr/dividerColor">
 
-            <RelativeLayout
-                android:background="?attr/dividerColor"
-                android:id="@+id/profileTop"
+            <ImageView
+                android:id="@+id/userBackground"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="300dp" />
 
-                <ImageView
-                    android:id="@+id/userBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp" />
-
-                <LinearLayout
-                    android:layout_marginTop="@dimen/topBlurSize"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/userpic"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        app:civ_circle_background_color="@color/colorAccent"
-                        android:layout_gravity="center"
-                        app:civ_border_width="0dp"
-                        tools:src="@drawable/ic_neptune" />
-
-                </LinearLayout>
-            </RelativeLayout>
-
-
-            <RelativeLayout
-                android:background="?android:colorBackground"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/topBlurSize"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/nameTitle"
-                    style="@style/TextAppearance.MaterialComponents.Body1"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerInParent="true"
-                    android:padding="@dimen/padding_default_16dp"
-                    android:text="Nome"
-                    android:textStyle="bold" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/userpic"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    app:civ_border_width="0dp"
+                    app:civ_circle_background_color="@color/colorAccent"
+                    tools:src="@drawable/ic_neptune" />
 
-                <EditText
-                    android:id="@+id/userNameEditText"
-                    style="@style/TextAppearance.MaterialComponents.Body1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="start"
-                    android:layout_toStartOf="@id/saveButton"
-                    android:layout_toEndOf="@id/nameTitle"
-                    android:background="@color/transparent"
-                    android:padding="@dimen/padding_default_16dp"
-                    app:layout_constraintBottom_toBottomOf="@id/nameTitle"
-                    app:layout_constraintEnd_toStartOf="@id/saveButton"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@id/nameTitle"
-                    app:layout_constraintTop_toTopOf="@id/nameTitle"
-                    android:maxLength="40"
-                    android:singleLine="true"
-                    tools:text="Caio Alves Ferreira" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/saveButton"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:text="Salvar"
-                    android:textColor="@color/md_blue500"
-                    android:textStyle="bold"
-                    android:textAllCaps="false"
-                    tools:visibility="visible"
-                    android:visibility="gone" />
+            </LinearLayout>
+        </RelativeLayout>
 
 
-            </RelativeLayout>
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:colorBackground">
 
             <TextView
-                android:id="@+id/provider"
-                android:background="?attr/dividerColor"
-                android:layout_width="match_parent"
+                android:id="@+id/nameTitle"
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_outline_mail_outline_24"
-                android:drawablePadding="@dimen/padding_default_16dp"
-                android:enabled="false"
-                android:maxLines="1"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
                 android:padding="@dimen/padding_default_16dp"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                android:textStyle="bold"
-                tools:text="motiv@gmail.com" />
+                android:text="Nome"
+                android:textStyle="bold" />
 
-
-            <RelativeLayout
-                android:id="@+id/adminView"
+            <EditText
+                android:id="@+id/userNameEditText"
+                style="@style/TextAppearance.MaterialComponents.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?navblurOverLayColor"
+                android:layout_centerInParent="true"
+                android:layout_gravity="start"
+                android:layout_toStartOf="@id/saveButton"
+                android:layout_toEndOf="@id/nameTitle"
+                android:background="@color/transparent"
+                android:maxLength="40"
+                android:padding="@dimen/padding_default_16dp"
+                android:singleLine="true"
+                app:layout_constraintBottom_toBottomOf="@id/nameTitle"
+                app:layout_constraintEnd_toStartOf="@id/saveButton"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/nameTitle"
+                app:layout_constraintTop_toTopOf="@id/nameTitle"
+                tools:text="Caio Alves Ferreira" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/saveButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:text="Salvar"
+                android:textAllCaps="false"
+                android:textColor="@color/md_blue500"
+                android:textStyle="bold"
                 android:visibility="gone"
-                tools:visibility="visible">
+                tools:visibility="visible" />
 
-                <ImageView
-                    android:id="@+id/adminBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="65dp"
-                    android:scaleType="centerCrop"
-                    android:transitionName="@string/quote_transaction" />
 
-                <TextView
-                    android:id="@+id/adminText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:padding="@dimen/padding_default_16dp"
-                    android:text="Motiv +"
-                    android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                    android:textStyle="bold" />
+        </RelativeLayout>
 
-            </RelativeLayout>
+
+        <TextView
+            android:id="@+id/provider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/dividerColor"
+            android:drawableStart="@drawable/ic_outline_mail_outline_24"
+            android:drawablePadding="@dimen/padding_default_16dp"
+            android:enabled="false"
+            android:maxLines="1"
+            android:padding="@dimen/padding_default_16dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textStyle="bold"
+            tools:text="motiv@gmail.com" />
+
+
+        <RelativeLayout
+            android:id="@+id/adminView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?navblurOverLayColor"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/adminBackground"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:scaleType="centerCrop"
+                android:transitionName="@string/quote_transaction" />
 
             <TextView
-                android:id="@+id/aboutButton"
+                android:id="@+id/adminText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_uranus"
-                android:drawablePadding="@dimen/padding_default_16dp"
-                android:foreground="?selectableItemBackground"
+                android:layout_centerInParent="true"
+                android:foreground="?attr/selectableItemBackground"
                 android:padding="@dimen/padding_default_16dp"
-                android:text="Sobre"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:text="Motiv +"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/singOutButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/padding_default_16dp"
-                android:text="Desconectar"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="@color/material_red500"
-                android:textStyle="bold" />
+        </RelativeLayout>
 
-            <TextView
-                android:id="@+id/userID"
-                style="@style/TextAppearance.MaterialComponents.Caption"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:enabled="false"
-                android:maxLines="1"
-                android:padding="@dimen/padding_default_16dp"
-                android:textStyle="bold"
-                tools:text="caioferre.ira@gmail.com" />
-        </LinearLayout>
-    </ScrollView>
-</layout>
+        <TextView
+            android:id="@+id/aboutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_uranus"
+            android:drawablePadding="@dimen/padding_default_16dp"
+            android:foreground="?selectableItemBackground"
+            android:padding="@dimen/padding_default_16dp"
+            android:text="Sobre"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/singOutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_default_16dp"
+            android:text="Desconectar"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textColor="@color/material_red500"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/userID"
+            style="@style/TextAppearance.MaterialComponents.Caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:maxLines="1"
+            android:padding="@dimen/padding_default_16dp"
+            android:textStyle="bold"
+            tools:text="caioferre.ira@gmail.com" />
+    </LinearLayout>
+</ScrollView>
