--- a/app/src/main/res/layout/new_post_tutorial_dialog_layout.xml
+++ b/app/src/main/res/layout/new_post_tutorial_dialog_layout.xml
@@ -1,56 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?android:colorBackground"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_default_16dp">
 
-    <data>
-
-    </data>
-
-    <LinearLayout
+    <View
+        android:id="@+id/topAnimation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:colorBackground"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/padding_default_16dp">
+        android:layout_height="5dp"
+        android:layout_gravity="center"
+        android:background="@drawable/motiv_gradient"
+        android:backgroundTint="?colorPrimaryDark" />
 
-        <View
-            android:id="@+id/topAnimation"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:background="@drawable/motiv_gradient"
-            android:backgroundTint="?colorPrimaryDark" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_default_16dp"
+        android:text="Um novo jeito de criar seus posts"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:textColor="?android:textColorPrimary"
+        android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_default_16dp"
-            android:text="Um novo jeito de criar seus posts"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            android:textColor="?android:textColorPrimary"
-            android:textStyle="bold" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableEnd="@drawable/ic_swipe_left"
+        android:paddingVertical="@dimen/padding_small_8dp"
+        android:text="Simples e prático! Arrasta para esquerda para mudar o estilo da frase!"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_swipe_left"
-            android:paddingVertical="@dimen/padding_small_8dp"
-            android:text="Simples e prático! Arrasta para esquerda para mudar o estilo da frase!"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_continue"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/padding_default_16dp"
+        android:stateListAnimator="@animator/list_animator"
+        android:text="continuar"
+        android:textAllCaps="false"
+        android:textColor="?android:textColorPrimary"
+        android:textStyle="bold" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_continue"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/padding_default_16dp"
-            android:stateListAnimator="@animator/list_animator"
-            android:text="continuar"
-            android:textAllCaps="false"
-            android:textColor="?android:textColorPrimary"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
