--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -1,127 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/dividerColor">
 
 
-    <RelativeLayout
-        android:background="?attr/dividerColor"
+    <include
+        android:id="@+id/stylesPager"
+        layout="@layout/style_pager" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_above="@id/save_quote_button"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/topBlurSize"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_default_16dp"
+        android:transitionName="@string/quote_transaction">
 
-
-        <include
-            android:id="@+id/stylesPager"
-            layout="@layout/style_pager" />
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/quoteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@id/save_quote_button"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="@dimen/topBlurSize"
+            android:autoSizeMaxTextSize="@dimen/big_quote_size"
+            android:autoSizeMinTextSize="@dimen/min_quote_size"
+            android:autoSizeTextType="uniform"
+            android:background="@color/transparent"
+            android:breakStrategy="high_quality"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/padding_default_16dp"
-            android:transitionName="@string/quote_transaction">
-
-            <EditText
-                android:id="@+id/quoteTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autoSizeMaxTextSize="@dimen/big_quote_size"
-                android:autoSizeMinTextSize="@dimen/min_quote_size"
-                android:autoSizeTextType="uniform"
-                android:background="@color/transparent"
-                android:breakStrategy="high_quality"
-                android:gravity="center"
-                android:hint="@string/quote"
-                android:maxHeight="400dp"
-                android:maxLength="200"
-                android:textAlignment="center"
-                android:textSize="@dimen/big_quote_size"
-                android:textStyle="bold"
-                android:transitionName="@string/quote_transaction"
-                android:typeface="normal"
-                android:visibility="gone"
-                tools:textColor="@color/md_white"
-                tools:visibility="visible" />
-
-            <EditText
-                android:id="@+id/author_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/transparent"
-                android:backgroundTint="@color/transparent"
-                android:gravity="center"
-                android:hint="@string/author"
-                android:paddingVertical="@dimen/padding_default_16dp"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:textStyle="italic"
-                android:maxLength="40"
-                android:transitionName="@string/author_transaction"
-                android:visibility="gone"
-                tools:text="Lana Del Rey"
-                tools:textColor="@color/md_white"
-                tools:visibility="visible" />
-        </LinearLayout>
-
-
-        <TextView
-            android:id="@+id/available_styles"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/stylePreviewRecycler"
-            android:layout_marginHorizontal="@dimen/margin_default_10dp"
-            android:text="Estilos disponíveis"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            android:textStyle="bold" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/stylePreviewRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/save_quote_button"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="1"
-            tools:listitem="@layout/style_preview_card" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/save_quote_button"
-            android:layout_height="wrap_content"
-            android:stateListAnimator="@animator/list_animator"
-            android:textColor="?android:textColorPrimary"
+            android:hint="@string/quote"
+            android:maxHeight="400dp"
+            android:maxLength="200"
+            android:textAlignment="center"
+            android:textSize="@dimen/big_quote_size"
             android:textStyle="bold"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/margin_default_10dp"
-            app:backgroundTint="@color/colorAccent"
-            android:text="@string/save_quote_button"
-            app:strokeColor="?android:textColorPrimary"
-            app:strokeWidth="@dimen/default_stroke"
-            android:padding="@dimen/padding_default_16dp"
-            android:layout_marginBottom="?attr/actionBarSize"
-            android:layout_alignParentBottom="true" />
-
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/editloading"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:indeterminate="true"
+            android:transitionName="@string/quote_transaction"
+            android:typeface="normal"
             android:visibility="gone"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="?attr/actionBarSize"
-            android:elevation="8dp"
-            app:indicatorColor="?android:textColorPrimary"
-            app:indicatorDirectionCircular="clockwise"
-            app:trackThickness="1dp"
-            android:layout_centerInParent="true"
+            tools:textColor="@color/md_white"
             tools:visibility="visible" />
 
-    </RelativeLayout>
+        <EditText
+            android:id="@+id/author_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/transparent"
+            android:backgroundTint="@color/transparent"
+            android:gravity="center"
+            android:hint="@string/author"
+            android:maxLength="40"
+            android:paddingVertical="@dimen/padding_default_16dp"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="italic"
+            android:transitionName="@string/author_transaction"
+            android:visibility="gone"
+            tools:text="Lana Del Rey"
+            tools:textColor="@color/md_white"
+            tools:visibility="visible" />
+    </LinearLayout>
 
-</layout>
+
+    <TextView
+        android:id="@+id/available_styles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/stylePreviewRecycler"
+        android:layout_marginHorizontal="@dimen/margin_default_10dp"
+        android:text="Estilos disponíveis"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:textStyle="bold" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/stylePreviewRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/save_quote_button"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="1"
+        tools:listitem="@layout/style_preview_card" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/save_quote_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="@dimen/margin_default_10dp"
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:padding="@dimen/padding_default_16dp"
+        android:stateListAnimator="@animator/list_animator"
+        android:text="@string/save_quote_button"
+        android:textColor="?android:textColorPrimary"
+        android:textStyle="bold"
+        app:backgroundTint="@color/colorAccent"
+        app:strokeColor="?android:textColorPrimary"
+        app:strokeWidth="@dimen/default_stroke" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/editloading"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:elevation="8dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:indicatorColor="?android:textColorPrimary"
+        app:indicatorDirectionCircular="clockwise"
+        app:trackThickness="1dp"
+        tools:visibility="visible" />
+
+</RelativeLayout>
+
