--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -1,40 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/playerContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent"
+    android:orientation="horizontal"
+    android:padding="@dimen/padding_small_8dp"
+    android:visibility="gone"
+    tools:visibility="visible">
 
-    <data>
-
-    </data>
-
-    <LinearLayout
-        android:id="@+id/playerContainer"
-        android:layout_width="match_parent"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/playing_animation"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:background="@color/transparent"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding_small_8dp"
-        tools:visibility="visible"
-        android:visibility="gone">
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/playing_animation"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:stateListAnimator="@animator/list_animator"
-            app:lottie_colorFilter="@color/colorPrimaryDark"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/planet_spinning"
-            app:lottie_repeatMode="reverse"
-            app:lottie_scale="8" />
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:stateListAnimator="@animator/list_animator"
+        app:lottie_colorFilter="@color/colorPrimaryDark"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/planet_spinning"
+        app:lottie_repeatMode="reverse"
+        app:lottie_scale="8" />
 
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/radiosPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/radiosPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    </LinearLayout>
-</layout>
+</LinearLayout>
