--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -1,75 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/stroke_filled"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_default_16dp">
 
-
-    <LinearLayout
-        android:background="@drawable/stroke_filled"
-        android:id="@+id/mainView"
+    <include
+        layout="@layout/motiv_dots"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/padding_default_16dp" />
+
+    <ImageView
+        android:id="@+id/covers_gif_mark"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:layout_marginVertical="@dimen/margin_small_4dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/giphy_color"
+        android:visibility="gone"
+        app:tint="?android:textColorPrimary"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/dialog_title"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/padding_default_16dp"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/motiv_dots"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_default_16dp" />
-
-        <ImageView
-            android:id="@+id/covers_gif_mark"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_marginVertical="@dimen/margin_small_4dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/giphy_color"
-            android:visibility="gone"
-            app:tint="?android:textColorPrimary"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/dialog_title"
-            android:padding="@dimen/padding_default_16dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            android:textStyle="bold"
-            tools:text="Escolher ícone de perfil"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:textStyle="bold"
+        tools:text="Escolher ícone de perfil" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_below="@id/dialog_title"
-            android:id="@+id/picsrecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:foregroundGravity="center"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
-            tools:listitem="@layout/pics_layout" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/picsrecycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dialog_title"
+        android:foregroundGravity="center"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/pics_layout" />
 
-        <include
-            android:id="@+id/not_found_include"
-            layout="@layout/empty_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <include
+        android:id="@+id/not_found_include"
+        layout="@layout/empty_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:visibility="gone"
-            app:indicatorColor="@color/colorPrimaryDark"
-            app:indicatorSize="50dp"
-            app:trackColor="@color/colorAccent"
-            app:trackCornerRadius="@dimen/radius_default_10dp"
-            app:trackThickness="5dp" />
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:indicatorColor="@color/colorPrimaryDark"
+        app:indicatorSize="50dp"
+        app:trackColor="@color/colorAccent"
+        app:trackCornerRadius="@dimen/radius_default_10dp"
+        app:trackThickness="5dp" />
 
-    </LinearLayout>
+</LinearLayout>
 
-</layout>
