--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/quotesrecyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:orientation="vertical"
+    tools:itemCount="4"
+    tools:listitem="@layout/quotes_card" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/quotesrecyclerview"
-        android:animateLayoutChanges="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:itemCount="4"
-        tools:listitem="@layout/quotes_card" />
-
-</layout>
