--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -1,65 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/reference_card"
+    android:layout_width="200dp"
+    android:layout_height="250dp"
+    android:layout_margin="10dp"
+    android:stateListAnimator="@animator/list_animator"
+    app:cardCornerRadius="@dimen/radius_default_10dp"
+    app:cardElevation="0dp"
+    app:strokeColor="?android:textColorPrimary"
+    app:strokeWidth="2dp">
 
-    <data>
 
-        <variable
-            name="reference"
-            type="com.creat.motiv.utilities.Reference" />
-    </data>
+    <View
+        android:id="@+id/reference_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?android:textColorHint"
+        tools:background="@drawable/ouch_gradient" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/reference_card"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:stateListAnimator="@animator/list_animator"
-        app:cardCornerRadius="@dimen/radius_default_10dp"
-        app:cardElevation="0dp"
-        app:strokeColor="?android:textColorPrimary"
-        app:strokeWidth="2dp">
+        android:gravity="center"
+        android:orientation="vertical">
 
+        <TextView
+            style="@style/TextAppearance.MaterialComponents.Headline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{reference.name}"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            tools:text="Icons8/Ouch" />
 
-        <View
-            android:id="@+id/reference_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?android:textColorHint"
-            tools:background="@drawable/ouch_gradient" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/reference_description"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:text="@{reference.description}"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            tools:text="@string/dribble_description" />
 
-            <TextView
-                android:textAlignment="center"
-                style="@style/TextAppearance.MaterialComponents.Headline4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{reference.name}"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                tools:text="Icons8/Ouch" />
-
-            <TextView
-                android:id="@+id/reference_description"
-                style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@{reference.description}"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                tools:text="@string/dribble_description" />
-
-        </LinearLayout>
+    </LinearLayout>
 
 
-    </com.google.android.material.card.MaterialCardView>
-</layout>
+</com.google.android.material.card.MaterialCardView>
