--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:paddingBottom="@dimen/padding_big_24"
-        android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/padding_big_24">
+
+    <include
+        android:id="@+id/profileView"
+        layout="@layout/fragment_profile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        <include
-            android:id="@+id/profileView"
-            layout="@layout/fragment_profile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <include layout="@layout/blur_layout" />
 
-        <include layout="@layout/blur_layout" />
+    <include layout="@layout/motiv_toolbar" />
 
-        <include layout="@layout/motiv_toolbar" />
-
-    </RelativeLayout>
+</RelativeLayout>
 
 
-
-</layout>
 
